# the-algorithm

./: COPYING  README.md  RETREIVAL_SIGNALS.md
ann/src/main/python/dataflow/: BUILD.bazel  bq.sql  faiss_index_bq_dataset.py
ann/src/main/python/dataflow/worker_harness/: Dockerfile  cloudbuild.yml
ann/src/main/scala/com/twitter/ann/experimental/: BUILD.bazel  Runner.scala
cr-mixer/: BUILD.bazel  README.md
cr-mixer/server/src/main/resources/: logback.xml
cr-mixer/server/src/main/resources/config/: decider.yml
cr-mixer/server/src/main/scala/com/twitter/cr_mixer/: BUILD.bazel  CrMixerHttpServerWarmupHandler.scala  CrMixerServer.scala  CrMixerThriftServerWarmupHandler.scala
cr-mixer/thrift/src/main/thrift/: BUILD  ads.thrift  candidate_generation_key.thrift  cr_mixer.thrift  frs_based_tweet.thrift  metric_tags.thrift  product.thrift  product_context.thrift  related_tweet.thrift  related_video_tweet.thrift  scribe.thrift  source_type.thrift  topic_tweet.thrift  uteg.thrift  validation.thrift
graph-feature-service/: BUILD.bazel  README.md
graph-feature-service/doc/: common.md  getintersection.md
graph-feature-service/src/main/scala/com/twitter/graph_feature_service/common/: BUILD.bazel  (+1 more)
graph-feature-service/src/main/thrift/com/twitter/graph_feature_service/: BUILD  graph_feature_service.thrift
home-mixer/: BUILD.bazel  README.md
navi/dr_transform/: Cargo.toml
navi/dr_transform/src/: all_config.rs  converter.rs  lib.rs  util.rs
navi/navi/: Cargo.toml  build.rs
navi/navi/proto/kfserving/: grpc_predict_v2.proto
navi/navi/proto/tensorflow/core/example/: example.proto  feature.proto
navi/navi/proto/tensorflow/core/framework/: allocation_description.proto  api_def.proto  attr_value.proto  cost_graph.proto  dataset_metadata.proto  dataset_options.proto  device_attributes.proto  full_type.proto  function.proto  graph.proto  graph_transfer_info.proto  kernel_def.proto  log_memory.proto  model.proto  node_def.proto  op_def.proto  reader_base.proto  resource_handle.proto  step_stats.proto  summary.proto  tensor.proto  tensor_description.proto  tensor_shape.proto  tensor_slice.proto  types.proto  variable.proto  versions.proto
navi/navi/proto/tensorflow/core/protobuf/: autotuning.proto  bfc_memory_map.proto  cluster.proto  composite_tensor_variant.proto  config.proto  control_flow.proto  conv_autotuning.proto  coordination_config.proto  coordination_service.proto  critical_section.proto  data_service.proto  debug.proto  debug_event.proto  device_filters.proto  device_properties.proto  distributed_runtime_payloads.proto  eager_service.proto  error_codes.proto  graph_debug_info.proto  master.proto  master_service.proto  meta_graph.proto  named_tensor.proto  queue_runner.proto  remote_tensor_handle.proto  replay_log.proto  rewriter_config.proto  saved_model.proto  saved_object_graph.proto  saver.proto  service_config.proto  snapshot.proto  status.proto  struct.proto  tensor_bundle.proto  tensorflow_server.proto  trackable_object_graph.proto  transport_options.proto  verifier_config.proto  worker.proto  (+1 more)
navi/navi/proto/tensorflow_serving/apis/: classification.proto  get_model_metadata.proto  get_model_status.proto  inference.proto  input.proto  logging.proto  model.proto  model_management.proto  model_service.proto  predict.proto  prediction_log.proto  prediction_service.proto  regression.proto  session_service.proto  status.proto
navi/navi/proto/tensorflow_serving/config/: file_system_storage_path_source.proto  log_collector_config.proto  logging_config.proto  model_server_config.proto
navi/navi/scripts/: run_onnx.sh  run_tf2.sh
navi/navi/src/: batch.rs  bootstrap.rs  cli_args.rs  lib.rs  metrics.rs  onnx_model.rs  predict_service.rs  tf_model.rs  torch_model.rs
navi/navi/src/cores/: validator.rs
pushservice/: BUILD.bazel  README.md
pushservice/src/main/python/models/heavy_ranking/: BUILD  README.md  deep_norm.py  eval.py  features.py  graph.py  model_pools.py  params.py  run_args.py  update_warm_start_checkpoint.py
pushservice/src/main/python/models/heavy_ranking/lib/: BUILD  layers.py  model.py  params.py
pushservice/src/main/python/models/libs/: BUILD  customized_full_sparse.py  get_feat_config.py  graph_utils.py  group_metrics.py  initializer.py  light_ranking_metrics.py  metric_fn_utils.py  model_args.py  model_utils.py  warm_start_utils.py
pushservice/src/main/python/models/light_ranking/: BUILD  README.md  deep_norm.py  eval_model.py  model_pools_mlp.py
src/scala/com/twitter/graph/batch/: BUILD.bazel
src/scala/com/twitter/simclusters_v2/scalding/evaluation/: BUILD.bazel  CandidateEvaluationBase.scala  EvaluationMetricHelper.scala  EvaluationReferenceDataExtraction.scala  LabelCorrelationsHelper.scala  SimClustersEvaluationAdhocApp.scala
src/scala/com/twitter/simclusters_v2/scalding/inferred_entities/: BUILD.bazel  InferredEntities.scala  InferredEntitiesFromInterestedIn.scala  InferredSemanticCoreEntitiesFromKnownFor.scala  ProdSources.scala
src/scala/com/twitter/simclusters_v2/scalding/mbcg/: AllFeatures.scala  BUILD.bazel  RecordAdapters.scala  TweetEmbeddingGenerationJob.scala  UserEmbeddingGenerationJob.scala
src/scala/com/twitter/simclusters_v2/scalding/offline_job/: BUILD.bazel  OfflineTweetRecommendation.scala  SimClustersOfflineJob.scala  SimClustersOfflineJobAdhocApp.scala  SimClustersOfflineJobScheduledApp.scala  SimClustersOfflineJobUtil.scala
src/scala/com/twitter/simclusters_v2/scalding/offline_tweets/: BUILD.bazel  ClusterTopMediaTweetsJob.scala
src/scala/com/twitter/simclusters_v2/scalding/optout/: BUILD.bazel  InterestedInOptOut.scala  KnownForOptOut.scala  SimClustersOptOutUtil.scala
src/scala/com/twitter/simclusters_v2/scalding/update_known_for/: BUILD.bazel  UpdateKnownFor20M145K2020.scala  UpdateKnownForSBFRunner.scala
timelineranker/server/: BUILD.bazel
timelineranker/server/config/: BUILD  decider.yml
timelineranker/server/src/main/resources/: BUILD.bazel  logback-timelineranker.xml
timelineranker/server/src/main/scala/: BUILD.bazel
unified_user_actions/kafka/src/test/scala/: BUILD.bazel
(+6595 files in other folders)
