jvm_b nary(
    na  = "b n",
    basena  = "cr-m xer",
    ma n = "com.tw ter.cr_m xer.CrM xerServerMa n",
    runt  _platform = "java11",
    tags = ["bazel-compat ble"],
    dependenc es = [
        "3rdparty/jvm/ch/qos/logback:logback-class c",
        "cr-m xer/server/src/ma n/scala/com/tw ter/cr_m xer",
        "f nagle/f nagle-z pk n-scr be/src/ma n/scala",
        "f natra/ nject/ nject-logback/src/ma n/scala",
        "loglens/loglens-logback/src/ma n/scala/com/tw ter/loglens/logback",
        "tw ter-server- nternal/src/ma n/scala",
        "tw ter-server/logback-class c/src/ma n/scala",
    ],
)

#  Aurora Workflows bu ld phase convent on requ res a jvm_app na d w h ${project-na }-app
jvm_app(
    na  = "cr-m xer-app",
    arch ve = "z p",
    b nary = ":b n",
    tags = ["bazel-compat ble"],
)
