al as(
    na  = "graph_feature_serv ce-server",
    target = ":graph_feature_serv ce-server_l b",
)

target(
    na  = "graph_feature_serv ce-server_l b",
    dependenc es = [
        "graph-feature-serv ce/src/ma n/scala/com/tw ter/graph_feature_serv ce/server",
    ],
)

al as(
    na  = "graph_feature_serv ce-worker",
    target = ":graph_feature_serv ce-worker_l b",
)

target(
    na  = "graph_feature_serv ce-worker_l b",
    dependenc es = [
        "graph-feature-serv ce/src/ma n/scala/com/tw ter/graph_feature_serv ce/worker",
    ],
)

jvm_b nary(
    na  = "server-b n",
    basena  = "graph_feature_serv ce-server",
    ma n = "com.tw ter.graph_feature_serv ce.server.Ma n",
    platform = "java8",
    tags = ["bazel-compat ble"],
    dependenc es = [
        ":graph_feature_serv ce-server",
        "3rdparty/jvm/ch/qos/logback:logback-class c",
        "f nagle/f nagle-z pk n-scr be/src/ma n/scala",
        "loglens/loglens-logback/src/ma n/scala/com/tw ter/loglens/logback",
        "tw ter-server/logback-class c/src/ma n/scala",
    ],
)

jvm_b nary(
    na  = "worker-b n",
    basena  = "graph_feature_serv ce-worker",
    ma n = "com.tw ter.graph_feature_serv ce.worker.Ma n",
    platform = "java8",
    tags = ["bazel-compat ble"],
    dependenc es = [
        ":graph_feature_serv ce-worker",
        "3rdparty/jvm/ch/qos/logback:logback-class c",
        "f nagle/f nagle-z pk n-scr be/src/ma n/scala",
        "loglens/loglens-logback/src/ma n/scala/com/tw ter/loglens/logback",
        "tw ter-server/logback-class c/src/ma n/scala",
    ],
)

jvm_app(
    na  = "server-bundle",
    basena  = "graph_feature_serv ce-server-d st",
    b nary = ":server-b n",
    tags = ["bazel-compat ble"],
)

jvm_app(
    na  = "worker-bundle",
    basena  = "graph_feature_serv ce-worker-d st",
    b nary = ":worker-b n",
    tags = ["bazel-compat ble"],
)
