jvm_b nary(
    na  = "b n",
    basena  = "ho -m xer",
    ma n = "com.tw ter.ho _m xer.Ho M xerServerMa n",
    runt  _platform = "java11",
    tags = ["bazel-compat ble"],
    dependenc es = [
        "3rdparty/jvm/ch/qos/logback:logback-class c",
        "f nagle/f nagle-z pk n-scr be/src/ma n/scala",
        "f natra/ nject/ nject-logback/src/ma n/scala",
        "ho -m xer/server/src/ma n/scala/com/tw ter/ho _m xer",
        "loglens/loglens-logback/src/ma n/scala/com/tw ter/loglens/logback",
        "tw ter-server- nternal/src/ma n/scala",
        "tw ter-server/logback-class c/src/ma n/scala",
    ],
)

#  Aurora Workflows bu ld phase convent on requ res a jvm_app na d w h ho -m xer-app
jvm_app(
    na  = "ho -m xer-app",
    arch ve = "z p",
    b nary = ":b n",
    bundles = [
        bundle(
            f leset = ["conf g/**/*"],
            own ng_target = "ho -m xer/conf g:f les",
        ),
    ],
    tags = ["bazel-compat ble"],
)
