al as(
    na  = "fr gate-pushserv ce",
    target = ":fr gate-pushserv ce_l b",
)

target(
    na  = "fr gate-pushserv ce_l b",
    dependenc es = [
        "fr gate/fr gate-pushserv ce-opens ce/src/ma n/scala/com/tw ter/fr gate/pushserv ce",
    ],
)

jvm_b nary(
    na  = "b n",
    basena  = "fr gate-pushserv ce",
    ma n = "com.tw ter.fr gate.pushserv ce.PushServ ceMa n",
    runt  _platform = "java11",
    tags = ["bazel-compat ble"],
    dependenc es = [
        "3rdparty/jvm/ch/qos/logback:logback-class c",
        "f natra/ nject/ nject-logback/src/ma n/scala",
        "fr gate/fr gate-pushserv ce-opens ce/src/ma n/scala/com/tw ter/fr gate/pushserv ce",
        "loglens/loglens-logback/src/ma n/scala/com/tw ter/loglens/logback",
        "tw ter-server/logback-class c/src/ma n/scala",
    ],
    excludes = [
        exclude("com.tw ter.translat ons", "translat ons-tw ter"),
        exclude("org.apac .hadoop", "hadoop-aws"),
        exclude("org.tensorflow"),
        scala_exclude("com.tw ter", "cko a-scala"),
    ],
)

jvm_app(
    na  = "bundle",
    basena  = "fr gate-pushserv ce-package-d st",
    arch ve = "z p",
    b nary = ":b n",
    tags = ["bazel-compat ble"],
)

python3_l brary(
    na  = "mr_model_constants",
    s ces = [
        "conf g/deepb rd/constants.py",
    ],
    tags = ["bazel-compat ble"],
)
