target(
    dependenc es = [
        "t  l neranker/conf g",
        "t  l neranker/server/src/ma n/scala",
    ],
)

jvm_app(
    na  = "bundle",
    basena  = "t  l neranker-server-package-d st",
    b nary = "t  l neranker/server/src/ma n/scala:b n",
    bundles = [bundle(
        f leset = ["conf g/**/*"],
        own ng_target = "t  l neranker/server/conf g:f les",
    )],
    tags = ["bazel-compat ble"],
)
