res ces(
    na  = "sql",
    s ces = ["bq.sql"],
)

python3_l brary(
    na  = "fa ss_ ndex ng",
    s ces = ["**/*.py"],
    tags = ["bazel-compat ble"],
    dependenc es = [
        ":sql",
        "3rdparty/python/apac -beam:default",
        "3rdparty/python/fa ss-gpu:default",
        "3rdparty/python/gcsfs:default",
        "3rdparty/python/google-cloud-b gquery:default",
        "3rdparty/python/google-cloud-storage",
        "3rdparty/python/numpy:default",
        "3rdparty/python/pandas:default",
        "3rdparty/python/pandas-gbq:default",
        "3rdparty/python/pyarrow:default",
        "src/python/tw ter/ml/common/apac _beam",
    ],
)

python37_b nary(
    na  = "fa ss_ ndex ng_b n",
    s ces = ["fa ss_ ndex_bq_dataset.py"],
    platforms = [
        "current",
        "l nux_x86_64",
    ],
    tags = ["no- py"],
    z p_safe = False,
    dependenc es = [
        ":fa ss_ ndex ng",
        "3rdparty/python/_closures/ann/src/ma n/python/dataflow:fa ss_ ndex ng_b n",
    ],
)
