target(
    dependenc es = [
        "t  l neranker/server/src/ma n/scala/com/tw ter/t  l neranker/repos ory",
        "t  l neranker/server/src/ma n/scala/com/tw ter/t  l neranker/server",
        "t  l neranker/server/src/ma n/scala/com/tw ter/t  l neranker/s ce",
    ],
)

jvm_b nary(
    na  = "b n",
    basena  = "t  l neranker-server",
    ma n = "com.tw ter.t  l neranker.server.Ma n",
    runt  _platform = "java11",
    tags = ["bazel-compat ble"],
    dependenc es = [
        ":scala",
        "3rdparty/jvm/org/slf4j:jcl-over-slf4j",  # [1]
        "3rdparty/jvm/org/slf4j:log4j-over-slf4j",  # [1]
        "loglens/loglens-logback/src/ma n/scala/com/tw ter/loglens/logback",  # [2]
        "strato/src/ma n/scala/com/tw ter/strato/logg ng/logback",  # [2]
        "t  l neranker/server/src/ma n/res ces",  # [2]
        "tw ter-server/logback-class c/src/ma n/scala",  #[2]
    ],
)

# [1] br dge ot r logg ng  mple ntat ons to slf4j-ap   n add  on to JUL
#     https://docb rd.tw ter.b z/core_l brar es_gu de/logg ng/tw ter_server.html
#     w hout t se, c.t.l.Logger beco  s lent/null logger s nce no proper
#     conf gurat on can be found. T  can be removed once t re are no
#     depdency from serv ce to c.t.l.Logger
#
# [2]  ncur logback  mple ntat on
