jun _tests(
    s ces = ["**/*.scala"],
    tags = ["bazel-compat ble"],
    dependenc es = [
        "3rdparty/jvm/ch/qos/logback:logback-class c",
        "3rdparty/jvm/jun ",
        "3rdparty/jvm/org/scalatest",
        "3rdparty/jvm/org/scalatestplus:jun ",
        "f natra/ nject/ nject-core/src/test/scala:test-deps",
        "kafka/f nagle-kafka/f natra-kafka/src/test/scala:test-deps",
        "un f ed_user_act ons/kafka/src/ma n/scala/com/tw ter/un f ed_user_act ons/kafka",
        "un f ed_user_act ons/kafka/src/test/res ces",
        "un f ed_user_act ons/thr ft/src/test/thr ft/com/tw ter/un f ed_user_act ons:un f ed_user_act ons_spec-scala",
    ],
)
