scala_l brary(
    s ces = ["*.scala"],
    platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-only",
    ],
    dependenc es = [
        "src/scala/com/tw ter/s mclusters_v2/scald ng/common",
        "src/scala/com/tw ter/s mclusters_v2/scald ng/offl ne_job",
    ],
)

hadoop_b nary(
    na  = "t et_evaluat on_dum _cand date_adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.Dum Cand dateGenerat onAdhocJob",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":evaluat on",
    ],
)

hadoop_b nary(
    na  = "t et_evaluat on_t  l nes_reference_adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.evaluat on.AdhocT  l nesDataExtract on",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":evaluat on",
    ],
)

hadoop_b nary(
    na  = "t et_evaluat on_t  l nes_reference_batch",
    ma n = "com.tw ter.s mclusters_v2.scald ng.evaluat on.Sc duledT  l nesDataExtract onBatch",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":evaluat on",
    ],
)

hadoop_b nary(
    na  = "s mcluster_offl ne_eval_adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.evaluat on.S mClustersEvaluat onAdhocApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":evaluat on",
    ],
)
