scala_l brary(
    s ces = ["*.scala"],
    platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-only",
    ],
    dependenc es = [
        "src/scala/com/tw ter/onboard ng/relevance/s ce:utt_account_recom ndat ons-scala",
        "src/scala/com/tw ter/scald ng_ nternal/dalv2",
        "src/scala/com/tw ter/s mclusters_v2/scald ng",
        "src/scala/com/tw ter/wtf/ent y_real_graph/common",
    ],
)

hadoop_b nary(
    na  = " nferred_ent  es_from_known_for-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng. nferred_ent  es. nferredKnownForSemant cCoreEnt  esAdhocApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ": nferred_ent  es",
    ],
)

hadoop_b nary(
    na  = " nferred_ent  es_from_known_for",
    ma n = "com.tw ter.s mclusters_v2.scald ng. nferred_ent  es. nferredKnownForSemant cCoreEnt  esBatchApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ": nferred_ent  es",
    ],
)

hadoop_b nary(
    na  = " nferred_ent  es_from_ nterested_ n-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng. nferred_ent  es. nferred nterested nSemant cCoreEnt  esAdhocApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ": nferred_ent  es",
    ],
)

hadoop_b nary(
    na  = " nferred_ent  es_from_ nterested_ n",
    ma n = "com.tw ter.s mclusters_v2.scald ng. nferred_ent  es. nferred nterested nSemant cCoreEnt  esBatchApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ": nferred_ent  es",
    ],
)
