scala_l brary(
    s ces = [
        "*.scala",
    ],
    platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        "3rdparty/jvm/com/tw ter/algeb rd:core",
        "3rdparty/jvm/com/tw ter/algeb rd:ut l",
        "3rdparty/jvm/com/tw ter/storehaus:algebra",
        "3rdparty/jvm/com/tw ter/storehaus:core",
        "3rdparty/src/jvm/com/tw ter/scald ng:args",
        "3rdparty/src/jvm/com/tw ter/scald ng:commons",
        "3rdparty/src/jvm/com/tw ter/scald ng:core",
        "3rdparty/src/jvm/com/tw ter/scald ng:date",
        "3rdparty/src/jvm/com/tw ter/scald ng:db",
        "3rdparty/src/jvm/com/tw ter/scald ng:parquet",
        "ann/src/ma n/scala/com/tw ter/ann/hnsw",
        "ann/src/ma n/scala/com/tw ter/ann/scald ng/offl ne",
        "ann/src/ma n/scala/com/tw ter/ann/ut l",
        "geoduck/hadoop/scald ng/datasets:userlocat on-scala",
        " es ce/common/src/ma n/scala/com/tw ter/ es ce/common/ut l",
        " es ce/process ng/events/src/ma n/scala/com/tw ter/ es ce/process ng/events/batch" +
        ":server_engage nts-scala",
        " es ce/thr ft",
        "src/java/com/tw ter/ml/ap /constant",
        "src/scala/com/tw ter/ml/ap /ut l",
        "src/scala/com/tw ter/ml/featurestore/catalog/ent  es/core",
        "src/scala/com/tw ter/ml/featurestore/catalog/features/geo",
        "src/scala/com/tw ter/ml/featurestore/l b/batch",
        "src/scala/com/tw ter/scald ng_ nternal/dalv2",
        "src/scala/com/tw ter/scald ng_ nternal/dalv2/dataset",
        "src/scala/com/tw ter/scald ng_ nternal/db",
        "src/scala/com/tw ter/scald ng_ nternal/db/jdbc",
        "src/scala/com/tw ter/scald ng_ nternal/error_handl ng",
        "src/scala/com/tw ter/scald ng_ nternal/job",
        "src/scala/com/tw ter/scald ng_ nternal/job/analyt cs_batch",
        "src/scala/com/tw ter/scald ng_ nternal/mult format",
        "src/scala/com/tw ter/scald ng_ nternal/s ce",
        "src/scala/com/tw ter/scald ng_ nternal/s ce/lzo_scrooge",
        "src/scala/com/tw ter/scald ng_ nternal/typed",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces",
        "src/scala/com/tw ter/s mclusters_v2/scald ng/common",
        "src/thr ft/com/tw ter/ml/ap :data-java",
        "src/thr ft/com/tw ter/ml/ap : nterpretable-model-java",
        "t ets ce/publ c_t ets/src/ma n/scala/com/tw ter/t ets ce/publ c_t ets:publ c_t ets-scala",
        "twml/runt  /src/ma n/scala/com/tw ter/twml/runt  /scald ng",
        "ut l/ut l-core:scala",
        "ut l/ut l-stats/src/ma n/scala",
    ],
)

scald ng_job(
    na  = "t et-embedd ng-generat on-adhoc-job",
    ma n = "com.tw ter.s mclusters_v2.scald ng.mbcg.T etEmbedd ngGenerat onAdhocJob",
    args = [
        "--dateRange 2021-10-30T00 2021-10-30T01",
        "--model_na  model",
        "--model_path hdfs:///atla/proc/user/cassowary/explore_mbcg/models/tfx_model_1104/1635973177/t et_to r_w h_s gnature",
        "--concurrency_level 60",
        "--embedd ng_d  ns on 128",
        "--expected_ele nts 30000000",
        "--max_M 20",
        "--ef_construct on 200",
        "--t et_embedd ng_na  output",
        "--ann_output_path hdfs:///atla/proc/user/cassowary/explore_mbcg/ann_ ndex/test_11_04_adhoc",
    ],
    conf g = [
        ("hadoop.subm ter.cpu", 60),
        ("hadoop.subm ter.jvm.total- mory", "256g"),
        ("subm ter.t er", "preempt ble"),
        ("hadoop.map.jvm.total- mory", "6144m"),
    ],
    hadoop_cluster = "atla-proc3",
    platform = "java8",
    role = "cassowary",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":mbcg"],
)

scald ng_job(
    na  = "t et-embedd ng-generat on-batch-job",
    ma n = "com.tw ter.s mclusters_v2.scald ng.mbcg.T etEmbedd ngGenerat onBatchJob",
    args = [
        "--model_na  model",
        "--model_path hdfs:///atla/proc/user/cassowary/explore_mbcg/models/tfx_0119_1day_0110_3l_5e_f2v_gpu_resave/t et_to r_w h_s gnature",
        "--concurrency_level 60",
        "--embedd ng_d  ns on 128",
        "--expected_ele nts 5000000",
        "--max_M 40",
        "--ef_construct on 800",
        "--t et_embedd ng_na  output",
        "--f2v_ nput.feature_store_embedd ng Follow2VecProducerEmbedd ng200Dataset",
        "--f2v_ nput.feature_store_major_vers on 20210708",
        "--m nFavCount 32",
        "--ann_output_path hdfs:///atla/proc/user/cassowary/explore_mbcg/ann_ ndex/0125_batch_ ndex_f2v_m nfav",
    ],
    conf g = [
        ("hadoop.subm ter.cpu", 60),
        ("hadoop.subm ter.jvm.total- mory", "256g"),
        ("hadoop.map.jvm.total- mory", "6144m"),
        ("hadoop.subm ter.d sk", "100g"),
    ],
    cron = "*/5 * * * *",
    hadoop_cluster = "atla-proc3",
    platform = "java8",
    role = "cassowary",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":mbcg"],
)

scald ng_job(
    na  = "t et-embedd ng-generat on-batch-job-alternate",
    ma n = "com.tw ter.s mclusters_v2.scald ng.mbcg.T etEmbedd ngGenerat onBatchJobAlternate",
    args = [
        "--model_na  model",
        "--model_path hdfs:///atla/proc/user/cassowary/explore_mbcg/models/tfx_331_329_1e_128em_b128_hn10_all_gpu/t et_to r_w h_s gnature",
        "--concurrency_level 60",
        "--embedd ng_d  ns on 128",
        "--expected_ele nts 5000000",
        "--max_M 40",
        "--ef_construct on 800",
        "--t et_embedd ng_na  output",
        "--f2v_ nput.feature_store_embedd ng Follow2VecProducerEmbedd ng200Dataset",
        "--f2v_ nput.feature_store_major_vers on 20210708",
        "--m nFavCount 100",
        "-- ndexAllT ets",
        "--ann_output_path hdfs:///atla/proc/user/cassowary/explore_mbcg/ann_ ndex/0401_batch_ ndex_f2v_cos ne_all_t ets",
    ],
    conf g = [
        ("hadoop.subm ter.cpu", 60),
        ("hadoop.subm ter.jvm.total- mory", "256g"),
        ("hadoop.map.jvm.total- mory", "6144m"),
        ("hadoop.subm ter.d sk", "100g"),
    ],
    contact = "no-reply@tw ter.com",
    cron = "*/5 * * * *",
    hadoop_cluster = "atla-proc3",
    platform = "java8",
    role = "cassowary",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":mbcg"],
)

scald ng_job(
    na  = "t et-embedd ng-generat on-batch-job-exper  ntal",
    ma n = "com.tw ter.s mclusters_v2.scald ng.mbcg.T etEmbedd ngGenerat onBatchJobExper  ntal",
    args = [
        "--model_na  model",
        "--model_path hdfs:///atla/proc/user/cassowary/explore_mbcg/models/tfx_0127_1day_0110_3l_10e_128e_normf2v_nocos ne_gpu/t et_to r_w h_s gnature",
        "--concurrency_level 60",
        "--embedd ng_d  ns on 128",
        "--expected_ele nts 5000000",
        "--max_M 40",
        "--ef_construct on 800",
        "--t et_embedd ng_na  output",
        "--f2v_ nput.feature_store_embedd ng Follow2VecProducerEmbedd ng200Dataset",
        "--f2v_ nput.feature_store_major_vers on 20210708",
        "--m nFavCount 32",
        "--ann_output_path hdfs:///atla/proc/user/cassowary/explore_mbcg/ann_ ndex/0128_f2v_1 ek_batch_ ndex",
    ],
    conf g = [
        ("hadoop.subm ter.cpu", 60),
        ("hadoop.subm ter.jvm.total- mory", "256g"),
        ("hadoop.map.jvm.total- mory", "6144m"),
        ("hadoop.subm ter.d sk", "100g"),
    ],
    contact = "no-reply@tw ter.com",
    cron = "*/5 * * * *",
    hadoop_cluster = "atla-proc3",
    platform = "java8",
    role = "cassowary",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":mbcg"],
)

scald ng_job(
    na  = "user-embedd ng-generat on-adhoc-job",
    ma n = "com.tw ter.s mclusters_v2.scald ng.mbcg.UserEmbedd ngGenerat onAdhocJob",
    args = [
        "--dateRange 2021-12-01T00 2021-12-01T01",
        "--model_path hdfs:///atla/proc/user/cassowary/explore_mbcg/models/tfx_1202_logs_100m_b64_hn10_1127_v deo_pers stent/user_to r_w h_s gnature",
        "--embedd ng_d  ns on 128",
        "--user_embedd ng_na  output",
        "--kvs_output_path /user/cassowary/explore_mbcg/user_kvs_store/1207_adhoc_model_store",
    ],
    conf g = [
        ("hadoop.subm ter.cpu", 60),
        ("hadoop.subm ter.jvm.total- mory", "256g"),
        ("subm ter.t er", "preempt ble"),
        ("hadoop.map.jvm.total- mory", "6144m"),
    ],
    contact = "no-reply@tw ter.com",
    hadoop_cluster = "atla-proc3",
    platform = "java8",
    role = "cassowary",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble:m grated",
        "bazel-only",
        "known-to-fa l-j ra:SD-20253",
    ],
    dependenc es = [":mbcg"],
)

scald ng_job(
    na  = "user-embedd ng-generat on-batch-job",
    ma n = "com.tw ter.s mclusters_v2.scald ng.mbcg.UserEmbedd ngGenerat onBatchJob",
    args = [
        "--model_path hdfs:///atla/proc/user/cassowary/explore_mbcg/models/tfx_0119_1day_0110_3l_5e_f2v_gpu_resave/user_to r_w h_s gnature",
        "--embedd ng_d  ns on 128",
        "--user_embedd ng_na  output",
        "--f2v_ nput.feature_store_embedd ng FollowBasedConsu rFollow2VecAvgEmbedd ng200Dataset",
        "--f2v_ nput.feature_store_major_vers on 20210708",
        "--kvs_output_path /user/cassowary/explore_mbcg/user_kvs_store/0125_refres d_model_store_f2v",
    ],
    conf g = [
        ("hadoop.subm ter.cpu", 60),
        ("hadoop.subm ter.jvm.total- mory", "256g"),
        ("subm ter.t er", "preempt ble"),
        ("hadoop.map.jvm.total- mory", "6144m"),
    ],
    contact = "no-reply@tw ter.com",
    cron = "*/30 * * * *",
    hadoop_cluster = "atla-proc3",
    platform = "java8",
    role = "cassowary",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":mbcg"],
)

scald ng_job(
    na  = "user-embedd ng-generat on-batch-job-alternate",
    ma n = "com.tw ter.s mclusters_v2.scald ng.mbcg.UserEmbedd ngGenerat onBatchJobAlternate",
    args = [
        "--model_path hdfs:///atla/proc/user/cassowary/explore_mbcg/models/tfx_331_329_1e_128em_b128_hn10_all_gpu/user_to r_w h_s gnature",
        "--embedd ng_d  ns on 128",
        "--user_embedd ng_na  output",
        "--f2v_ nput.feature_store_embedd ng FollowBasedConsu rFollow2VecAvgEmbedd ng200Dataset",
        "--f2v_ nput.feature_store_major_vers on 20210708",
        "--kvs_output_path /user/cassowary/explore_mbcg/user_kvs_store/0401_refres d_model_store_all",
    ],
    conf g = [
        ("hadoop.subm ter.cpu", 60),
        ("hadoop.subm ter.jvm.total- mory", "256g"),
        ("subm ter.t er", "preempt ble"),
        ("hadoop.map.jvm.total- mory", "6144m"),
    ],
    contact = "no-reply@tw ter.com",
    cron = "*/30 * * * *",
    hadoop_cluster = "atla-proc3",
    platform = "java8",
    role = "cassowary",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":mbcg"],
)

scald ng_job(
    na  = "user-embedd ng-generat on-batch-job-exper  ntal",
    ma n = "com.tw ter.s mclusters_v2.scald ng.mbcg.UserEmbedd ngGenerat onBatchJobExper  ntal",
    args = [
        "--model_path hdfs:///atla/proc/user/cassowary/explore_mbcg/models/tfx_0127_1day_0110_3l_10e_128e_normf2v_nocos ne_gpu/user_to r_w h_s gnature",
        "--embedd ng_d  ns on 128",
        "--user_embedd ng_na  output",
        "--f2v_ nput.feature_store_embedd ng FollowBasedConsu rFollow2VecAvgEmbedd ng200Dataset",
        "--f2v_ nput.feature_store_major_vers on 20210708",
        "--kvs_output_path /user/cassowary/explore_mbcg/user_kvs_store/0328_f2v_cos ne_all_t ets_model_store",
    ],
    conf g = [
        ("hadoop.subm ter.cpu", 60),
        ("hadoop.subm ter.jvm.total- mory", "256g"),
        ("subm ter.t er", "preempt ble"),
        ("hadoop.map.jvm.total- mory", "6144m"),
    ],
    contact = "no-reply@tw ter.com",
    cron = "*/30 * * * *",
    hadoop_cluster = "atla-proc3",
    platform = "java8",
    role = "cassowary",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":mbcg"],
)
