scala_l brary(
    platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-only",
    ],
    dependenc es = [
        "3rdparty/jvm/com/tw ter/storehaus:algebra",
        "3rdparty/jvm/com/tw ter/storehaus:core",
        "3rdparty/src/jvm/com/tw ter/storehaus:algebra",
        "3rdparty/src/jvm/com/tw ter/storehaus:core",
        "graphstore/common:flock_follows-java",
        "snowflake: d",
        "src/java/com/tw ter/ml/ap /constant",
        "src/java/com/tw ter/sbf/graph",
        "src/scala/com/tw ter/ml/ap :ap -base",
        "src/scala/com/tw ter/pluck/s ce/core_workflows/user_model:condensed_user_state-scala",
        "src/scala/com/tw ter/scald ng_ nternal/dalv2",
        "src/scala/com/tw ter/scald ng_ nternal/job",
        "src/scala/com/tw ter/scald ng_ nternal/job/analyt cs_batch",
        "src/scala/com/tw ter/scald ng_ nternal/s ce",
        "src/scala/com/tw ter/scald ng_ nternal/s ce/lzo_scrooge",
        "src/scala/com/tw ter/s mclusters_v2/cand date_s ce",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces",
        "src/scala/com/tw ter/s mclusters_v2/scald ng",
        "src/scala/com/tw ter/s mclusters_v2/scald ng/common",
        "src/scala/com/tw ter/s mclusters_v2/summ ngb rd/common",
        "src/scala/com/tw ter/t  l nes/pred ct on/features/common",
        "src/scala/com/tw ter/t  l nes/pred ct on/features/ l",
        "src/scala/com/tw ter/t  l nes/pred ct on/features/recap",
        "src/scala/com/tw ter/wtf/scald ng/jobs/common:execut on_app",
        "src/thr ft/com/tw ter/ rm /cand date: rm -cand date-scala",
        "src/thr ft/com/tw ter/wtf/scald ng/s ms:s ms-thr ft-scala",
        "twadoop_conf g/conf gurat on/log_categor es/group/t  l ne:t  l ne_serv ce_favor es-scala",
        "users ce/snapshot/src/ma n/scala/com/tw ter/users ce/snapshot/flat:users ce_flat-scala",
        "users ce/snapshot/src/ma n/thr ft/com/tw ter/users ce/snapshot/flat:flat-scala",
    ],
)

hadoop_b nary(
    na  = "s mclusters_offl ne_job-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.offl ne_job.S mClustersOffl neJobAdhocApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":offl ne_job",
    ],
)

hadoop_b nary(
    na  = "s mclusters_offl ne_job",
    ma n = "com.tw ter.s mclusters_v2.scald ng.offl ne_job.S mClustersOffl neJobSc duledApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":offl ne_job",
    ],
)

hadoop_b nary(
    na  = "s mclusters_offl ne_job-repl",
    ma n = "com.tw ter.scald ng_ nternal.repl.Tw terScald ngS ll",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":offl ne_job",
        "sc ence/scald ng/scr pts:scald ng-repl-deps",
    ],
)

hadoop_b nary(
    na  = "dump_cluster_topk_job-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.offl ne_job.DumpClusterTopKT etsAdhoc",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":offl ne_job",
    ],
)

# Generated w h `capesospy-v2 create_target offl ne_t et_job src/scala/com/tw ter/s mclusters_v2/capesos_conf g/atla_proc3.yaml`, conf g hash bb0831.
scald ng_job(
    na  = "offl ne_t et_job",
    ma n = "com.tw ter.s mclusters_v2.scald ng.offl ne_job.S mClustersOffl neJobSc duledApp",
    conf g = [
        ("hadoop.comb ne- nput", "true"),
        ("hadoop.map.jvm.total- mory", "3072m"),
        ("hadoop.queue", "cassowary.default"),
        ("hadoop.reduce.jvm.total- mory", "3072m"),
        ("hadoop.subm ter.jvm.total- mory", "5120m"),
        ("subm ter.t er", "preempt ble"),
    ],
    contact = "no-reply@tw ter.com",
    cron = "14 * * * *",
    hadoop_cluster = "atla-proc3",
    platform = "java8",
    role = "cassowary",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":offl ne_job",
    ],
)
