scala_l brary(
    s ces = [
        "*.scala",
    ],
    platform = "java8",
    tags = ["bazel-only"],
    dependenc es = [
        "src/scala/com/tw ter/s mclusters_v2/scald ng",
        "t ets ce/publ c_t ets/src/ma n/scala/com/tw ter/t ets ce/publ c_t ets:publ c_t ets-scala",
        "users ce/snapshot/src/ma n/scala/com/tw ter/users ce/snapshot/flat:users ce_flat-scala",
    ],
)

hadoop_b nary(
    na  = "offl ne_cluster_top_ d a_t ets_20M_145K_2020-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.offl ne_t ets.AdhocClusterTopT etsJob",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":offl ne_t ets",
    ],
)
