scala_l brary(
    s ces = ["*.scala"],
    platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-only",
    ],
    dependenc es = [
        "src/scala/com/tw ter/octa n/p13n/batch:p13n_preferences-scala",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces:data_s ces",
        "src/scala/com/tw ter/s mclusters_v2/scald ng",
        "src/scala/com/tw ter/s mclusters_v2/scald ng/common",
        "src/scala/com/tw ter/s mclusters_v2/scald ng/ nferred_ent  es",
        "src/scala/com/tw ter/wtf/scald ng/jobs/common:cassowary_job",
        "src/scala/com/tw ter/wtf/scald ng/jobs/common:execut on_app",
        "src/scala/com/tw ter/wtf/scald ng/jobs/common:s ces",
        "src/scala/com/tw ter/wtf/scald ng/jobs/common:stats_ut l",
    ],
)

hadoop_b nary(
    na  = "known_for_optout-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.optout.KnownForOptOutAdhocJob",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":optout",
    ],
)

hadoop_b nary(
    na  = "known_for_optout_da ly",
    ma n = "com.tw ter.s mclusters_v2.scald ng.optout.KnownForOptOutDa lyBatchJob",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":optout",
    ],
)

hadoop_b nary(
    na  = " nterested_ n_optout-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.optout. nterested nOptOutAdhocJob",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
        "known-to-fa l-j ra:SD-14439",
    ],
    dependenc es = [
        ":optout",
    ],
)

hadoop_b nary(
    na  = " nterested_ n_optout_da ly",
    ma n = "com.tw ter.s mclusters_v2.scald ng.optout. nterested nOptOutDa lyBatchJob",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":optout",
    ],
)
