scala_l brary(
    s ces = [
        "*.scala",
    ],
    platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-only",
    ],
    dependenc es = [
        "src/java/com/tw ter/sbf/core",
        "src/java/com/tw ter/sbf/graph",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces:s mclusters_v2_embedd ngs_l e-scala",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces/presto_hdfs_s ces",
        "src/scala/com/tw ter/s mclusters_v2/scald ng",
        "src/scala/com/tw ter/s mclusters_v2/scald ng/common",
        "src/scala/com/tw ter/s mclusters_v2/scald ng/common/matr x",
        "src/scala/com/tw ter/wtf/ent y_real_graph/common",
        "src/scala/com/tw ter/wtf/ent y_real_graph/scald ng/common",
        "src/scala/com/tw ter/wtf/scald ng/jobs/common:execut on_app",
        "src/scala/com/tw ter/wtf/scald ng/jobs/common:s ces",
        "src/scala/com/tw ter/wtf/scald ng/jobs/common:stats_ut l",
        "src/thr ft/com/tw ter/recos/ent  es:ent  es-thr ft-scala",
        "src/thr ft/com/tw ter/wtf/ent y_real_graph:ent y_real_graph-thr ft-scala",
        "users ce/snapshot/src/ma n/scala/com/tw ter/users ce/snapshot/flat:users ce_flat-scala",
        "users ce/snapshot/src/ma n/thr ft/com/tw ter/users ce/snapshot/flat:flat-scala",
    ],
)

hadoop_b nary(
    na  = "update_known_for_20m_145k_2020-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.update_known_for.UpdateKnownFor20M145K2020Adhoc",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":update_known_for",
    ],
)

hadoop_b nary(
    na  = "update_known_for_20m_145k_2020",
    ma n = "com.tw ter.s mclusters_v2.scald ng.update_known_for.UpdateKnownFor20M145K2020",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":update_known_for",
    ],
)
