scala_l brary(
    na  = "server",
    s ces = ["*.scala"],
    comp ler_opt on_sets = ["fatal_warn ngs"],
    platform = "java8",
    tags = ["bazel-only"],
    dependenc es = [
        "ann/src/ma n/scala/com/tw ter/ann/annoy",
        "ann/src/ma n/scala/com/tw ter/ann/brute_force",
        "ann/src/ma n/scala/com/tw ter/ann/common",
        "ann/src/ma n/scala/com/tw ter/ann/hnsw",
    ],
)

hadoop_b nary(
    na  = "benchmark ng",
    basena  = "benchmark ng",
    ma n = "com.tw ter.ann.exper  ntal.Runner",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":server",
    ],
)
